src/components/StartPage/styles.scss
.startpage-wrapper {
  .box-container {
    display: flex;
    flex-direction: column;
    // flex-wrap: wrap;
    position: relative;

    width: 100%;
    min-height: 75vh;

    padding: 10vh 0;

    justify-content: center;
    align-content: center;
    align-items: center;
    @include media-breakpoint-up(lg){
      padding: 0 !important;
    }
    .box {
      z-index: 10;
      flex: 1;
      padding: 5vw;
      text-align: center;
      // width: 100%;
      .box-img {
        width: 100%;
        height: auto;
        border-radius: 50%;
      }
      h2,
      h4 {
        font-family: $big-text;
        font-weight: 800;
      }
      h2 {
        font-size: 2.5rem;
      }
      h4 {
        margin: 5vh 0 0;
        font-size: 1.8rem;
      }
      p {
        font-family: $small-text;
        font-size: 1.5rem;
      }
    }
    @include media-breakpoint-up(md) {
      padding: 10vw;
      .box {
        h2 {
          font-size: 3rem;
        }
      }
    }
    @include media-breakpoint-up(lg) {
      flex-direction: row;
      padding: 5vh;
      p {
        font-size: 1rem !important;
      }
    }
    @include media-breakpoint-up(xl) {
      p {
        font-size: 1.5rem !important;
      }
    }
  }
}

